adjusted overflow on mat-sidenav-content to fix breaking dropdown issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
 .landing-page {
+  .mat-sidenav-content {
+    overflow: visible;
+  }
   // TOOLBAR
   .mat-toolbar {
     height: 48px !important;
